testsuite/tests/source/errors/demo2.gpr

project Demo2 is
   for Languages use ("ada");
   for Source_Dirs use ("src2");
   for Object_Dir use "obj";

   package Naming is
      for Dot_Replacement use "__";
      for Body ("pck._b") use "pck___b.ads";
   end Naming;

end Demo2;
